--- a/src/app/layouts/navbar/navbar.html
+++ b/src/app/layouts/navbar/navbar.html
@@ -43,7 +43,7 @@
     [class.active]="isDropdownOpen">
   <a class="navbar-link">Más <span class="dropdown-arrow">▼</span></a>
   <div class="dropdown-content">
-    <a routerLink="/login" class="dropdown-item" (click)="onNavLinkClick()">Cerrar Sesión</a>
+    <a class="dropdown-item"  (click)="cerrarSesion()">Cerrar Sesión</a>
   </div>
 </li>
     </ul>
